Fix issue where "Like It" might get distorted by floating images

--- a/stylesheets/sharing-and-tipping.scss
+++ b/stylesheets/sharing-and-tipping.scss
@@ -38,6 +38,7 @@
   }
 }
 #like-it, #love-it {
+  clear:both;
   text-align:center;
   h3 {
     color:#666;
